--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			background-color: #ffffff;
 			color: #000000;
 			padding: 0 2em; 
-            margin-left: 50px;
-            margin-right: 50px;
+            margin-left: 10;
+            margin-right: 10;
 
           
 		}
