--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Health Article One">
-    <meta name="author" content="Prudential Life Assurance Kenya">
+    <meta name="author" content="Software Developer">
 	<style type="text/css">
 		body {
 			font-family: 'Pru Sans Normal', sans-serif;
@@ -39,9 +39,9 @@
 </head>
 <body>
     <p>
-        <strong>PRUDENTIAL</strong>
+        <strong>SOFTWARE</strong>
         <strong> </strong>
-        <strong>LIFE ASSURANCE COMPANY</strong>
+        <strong>SERVICES</strong>
     </p>
     <p>
         <strong>PRIVACY NOTICE</strong>
@@ -50,7 +50,7 @@
         <strong>DOCUMENT INFORMATION</strong>
     </p>
     <p>
-        <strong>Last updated: January 21, 2022</strong>
+        <strong>Last updated: May 15, 2024</strong>
     </p>
     <p>
         <strong>Version: 1.0</strong>
@@ -61,10 +61,10 @@
     <p>
         This Privacy Policy describes our policies and procedures on the
         collection, use and disclosure of Your information when you access our
-        sites and tells you about your privacy rights and how the law protects you.
+        apps or sites and tells you about your privacy rights and how the law protects you.
     </p>
     <p>
-        When you visit our website and use our services, you trust us with your
+        When you visit our website or install our apps and use our services, you trust us with your
         personal information. In this privacy notice, we describe our privacy
         policy.
     </p>
@@ -72,11 +72,11 @@
         Our privacy policy describes what information we collect, how we use it and
         what rights you have in relation to it. Please read through it carefully
         and if there are any provisions in this privacy policy that you disagree
-        with please discontinue use of our site and/or our services.
+        with please discontinue use of our services.
     </p>
     <p>
         This privacy policy applies to all information collected through our mobile
-        application.
+        applications.
     </p>
     <p>
         By using the application/service, you agree to the collection and use of
@@ -87,24 +87,16 @@
     </p>
     <p>
         <strong>We/Us </strong>
-        means Prudential Life Assurance Company and its affiliates
-    </p>
-    <p>
-        <strong>Prudential Group</strong>
-        means any affiliates of Prudential Life Assurance Kenya (including,
-        Prudential Plc, Prudential Africa Holdings Limited and Prudential
-        Corporation Asia).
+        means the Developer and our affiliates
     </p>
     <p>
         <strong>Service Provider</strong>
-        means any natural or legal person who processes the data on behalf of the
-        Company. It refers to third-party companies or individuals employed by the
-        Company to facilitate the Service, to provide the Service on behalf of the
-        Company, to perform services related to the Service or to assist the
-        Company in analyzing how the Service is used. It includes accountants,
-        auditors, IT service and platform providers, intermediaries, reinsurers,
-        investment managers, agents, selected third party financial and insurance
-        product providers and our professional advisers.
+        means any natural or legal person who processes the data on our behalf.
+        It refers to third-party companies or individuals employed by the Developer
+        to facilitate and/or provide the Service, to perform services related to the Service or to assist the
+        Developer in analyzing how the Service is used. It includes accountants,
+        auditors, IT service and platform providers, intermediaries,investment managers, 
+        agents, selected third party service providers and our professional advisers.
     </p>
     <p>
         <strong>Third-party Social Media Service</strong>
@@ -135,15 +127,14 @@
         While using our Service, we may ask you to provide us with certain
         personally identifiable information that can be used to contact or identify
         you. This information may include, but is not limited to: Email address,
-        First name and last name, Phone number, Address, Postal code, City,
-        Country, Photograph etc.
+        First name and last name, Phone number, City, Country, Photograph etc.
     </p>
     <p>
         For ease of use, We may collect, with Your prior permission, Information
         from your Device's phone book (contacts list)
     </p>
     <p>
-        The information will be uploaded to the Company's servers and/or a Service
+        The information will be uploaded to the Developer servers and/or a Service
         Provider's server. You can enable or disable access to this information at
         any time, through Your Device settings.
     </p>
@@ -188,7 +179,7 @@
         city, state and country, user identification numbers for your contacts,
         profile picture URL and any other information that you choose to make
         public); marketing leads and search results and links, including paid
-        listings (such as sponsored links
+        listings (such as sponsored links)
     </p>
     <p>
         <strong>COOKIES AND TRACKING TECHNOLOGIES</strong>
@@ -233,40 +224,39 @@
         crime prevention agencies and any legal, regulatory or government bodies.
         We may share your data with third party vendors, service providers,
         contractors or agents who perform services for us or on our behalf and
-        require access to such information perform their services. We will not
+        require access to such information to perform their services. We will not
         share, any of your information with third parties for their promotional
-        purposes or any without your consent.
+        purposes or anything without your consent.
     </p>
     <p>
         Your information, including Personal Data, is processed at our operating
-        offices and in any other places where the parties involved in the
+        areas and in any other places where the parties involved in the
         processing are located. This information may be transferred to other
-        jurisdiction where the data protection laws may differ than those from
-        those is Kenya. As we, the Prudential Group, and some of our Business
-        Partners are global companies, we might need to send your personal
-        information overseas. Any transfer of personal data overseas will be in
-        accordance with applicable local law requirements.
+        jurisdiction where the data protection laws may differ from ours.
+        As we, the Developer, and some of our Business Partners are global companies, 
+        we might need to send your personal information overseas. Any transfer of personal 
+        data overseas will be in accordance with applicable local law requirements.
     </p>
     <p>
         Your consent to this Privacy Policy followed by your submission of such
         information represents your agreement to that transfer.
     </p>
     <p>
-        The Company will take all steps reasonably necessary to ensure that your
+        We will take all steps reasonably necessary to ensure that your
         data is treated securely and in accordance with this Privacy Policy and no
         transfer of your Personal Data will take place to an organization or a
         country unless there are adequate controls in place including the security
-        of your data and other personal information
+        of your data and other personal information.
     </p>
     <p>
         When you share personal information (e.g. by posting comments,
-        contributions or other content to the sites) or otherwise interact with
+        contributions or other content to the sites and/or apps) or otherwise interact with
         public areas of the Site such personal information may be viewed by all
-        users and may be publicly distributed outside the Site
+        users and may be publicly distributed outside the Site.
     </p>
     <p>
-        If you interact with other users of our Sites and register through a social
-        network your contacts on the social network will see your name, profile
+        If you interact with other users of our Sites and/or apps and register through a social
+        network, your contacts on the social network will see your name, profile
         photo, and descriptions of your activity. Similarly, other users will be
         able to view descriptions of your activity, communicate with you within our
         Sites, and view your profile
@@ -278,7 +268,7 @@
         <strong>MANAGEMENT OF USAGE DATA</strong>
     </p>
     <p>
-        The Company may use Usage Data for the following purposes:
+        We may use Usage Data for the following purposes:
     </p>
     <ul>
         <li>
@@ -288,7 +278,7 @@
         <li>
             To manage your registration as a user of the Service. The Personal Data
             you provide can give you access to different functionalities of the
-            Service that are available to you as a registered user
+            Service that are available to you as a registered user.
         </li>
         <li>
             To contact You by email, telephone calls, SMS, or other equivalent
@@ -302,10 +292,10 @@
             To provide you with news, special offers and general information about
             other services and events which we offer that are similar to those that
             you have already purchased or enquired about unless You have opted not
-            to receive such information
+            to receive such information.
         </li>
         <li>
-            To attend to and manage Your requests to Us
+            To attend to and manage Your requests to Us.
         </li>
         <li>
             To contact you by email, telephone calls, SMS, or other equivalent
@@ -354,8 +344,7 @@
         of your personal information.
     </p>
     <p>
-        We, Prudential Life Assurance Kenya and the Prudential Group will send you
-        information by text, email, telephone, post or other means about our
+        We will send you information by text, email, telephone, post or other means about our
         products and services.
     </p>
     <p>
@@ -369,20 +358,20 @@
             If we are involved in a merger, acquisition or asset sale, your
             Personal Data may be transferred. We will provide notice before your
             Personal Data is transferred and becomes subject to a different Privacy
-            Policy
+            Policy.
         </li>
         <li>
-            Under certain circumstances, the Company may be required to disclose
+            Under certain circumstances, the Developer may be required to disclose
             your Personal Data if required to do so by law or in response to valid
-            requests by public authorities (e.g. a court or a government agency).
+            requests by public authorities (e.g. a court of law or a government agency).
         </li>
         <li>
-            We may disclose your Personal Data in the good faith belief that such
-            action is necessary to: Comply with a legal obligation , Protect and
-            defend the rights or property of the Company, Prevent or investigate
-            possible wrongdoing in connection with the Service ,Protect the
+            We may disclose your Personal Data in good faith if we belief that such
+            action is necessary to: Comply with a legal obligation, Protect and
+            defend our rights or property rights, Prevent or investigate
+            possible wrongdoing in connection with the Service, Protect the
             personal safety of Users of the Service or the public and/or Protect
-            against legal liability
+            against legal liability.
         </li>
     </ul>
     <p>
@@ -390,7 +379,7 @@
     </p>
     <p>
         We have taken to protect your personal information against unauthorized
-        access or processing, of the personal data. We have implemented appropriate
+        access or processing of personal data. We have implemented appropriate
         policies and procedures to protect all your personal information held by
         us.
     </p>
@@ -399,7 +388,7 @@
         transmission over the Internet, or method of electronic storage is 100%
         secure. While we use commercially acceptable means to protect and secure
         your Personal Data, we cannot guarantee its absolute security. Please note
-        to access our sites within a secure environment
+        to access our sites within a secure environment.
     </p>
     <p>
         <strong>CHILDREN'S PRIVACY</strong>
@@ -407,8 +396,8 @@
     <p>
         We do not knowingly collect personally identifiable information from
         children (any person under 18 years of age). If you are a parent or
-        guardian and you are aware that your child has provided Us with Personal
-    Data, please contact Us via    <a href="mailto:info@prudentiallife.co.ke">info@prudentiallife.co.ke</a> If
+        guardian and you are aware that your child has provided Us with Personal Data, 
+        please contact Us via <a href="mailto:softwared988@gmail.com">softwared988@gmail.com</a> If
         we become aware that we have collected Personal Data from children without
         verification of parental consent, we take steps to remove that information
         from Our servers.
@@ -416,7 +405,7 @@
     <p>
         By using our site, you represent that you are at least 18 or that you are
         the parent or guardian of such a minor and consent to such minor use of the
-        Site
+        Site.
     </p>
     <p>
         <strong>LINKS TO OTHER WEBSITES</strong>
@@ -439,11 +428,11 @@
     </p>
     <p>
         We may update our Privacy Policy from time to time. We will notify you of
-        any changes by posting the new Privacy Policy on our website
+        any changes by posting the new Privacy Policy on our sites and/or apps.
     </p>
     <p>
         If we make a material change to the policy, we will let you know via notice
-        on Our website, prior to the change becoming effective and update the "Last
+        on Our services, prior to the change becoming effective and update the "Last
         updated" date at the top of this Privacy Policy.
     </p>
     <p>
@@ -456,15 +445,8 @@
     </p>
     <p>
         If you have any questions /comments about this Privacy Policy, you can
-    contact us via email    <a href="mailto:info@prudentiallife.co.ke">info@prudentiallife.co.ke</a> or
-        by post on
+        contact us via email <a href="mailto:softwared988@gmail.com">softwared988@gmail.com</a> or
+        by post on any of our services.
     </p>
-    <p>
-        Prudential Life Assurance Kenya
-    </p>
-    <p>
-        P.O Box 25363-00100, Nairobi, Kenya
-    </p>
-
 </body>
 </html>
