--- a/index.html
+++ b/index.html
@@ -448,5 +448,10 @@
         contact us via email <a href="mailto:softwared988@gmail.com">softwared988@gmail.com</a> or
         by post on any of our services.
     </p>
+    <p>
+    </p>
+    <p>
+        P.O Box 00610, NRB, KE
+    </p>
 </body>
 </html>
